force-app/main/default/objects/Vertex__VertexTaxDetail__e/Vertex__VertexTaxDetail__e.object-meta.xml
<CustomObject>
    <label>VertexTaxDetail</label>
    <pluralLabel>VertexTaxDetails</pluralLabel>
</CustomObject>