force-app/main/default/objects/Vertex__VertexTaxDetail__e/fields/Vertex__CalculatedTax__c.field-meta.xml
<CustomField>
    <fullName>Vertex__CalculatedTax__c</fullName>
    <label>CalculatedTax</label>
    <length>255</length>
    <type>Text</type>
</CustomField>