force-app/main/default/objects/Vertex__VertexTaxDetail__e/fields/Vertex__CurrencyCode__c.field-meta.xml
<CustomField>
    <fullName>Vertex__CurrencyCode__c</fullName>
    <label>CurrencyCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>