force-app/main/default/objects/Vertex__VertexTaxDetail__e/fields/Vertex__EffectiveRate__c.field-meta.xml
<CustomField>
    <fullName>Vertex__EffectiveRate__c</fullName>
    <label>EffectiveRate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>